--- a/src/app/pages/home/call-modal/call-modal.component.html
+++ b/src/app/pages/home/call-modal/call-modal.component.html
@@ -1,14 +1,16 @@
 <mat-dialog-content class="modal-shared">
   <div class="modal-header">
     <div class="modal-header-row">
-      <h2>Lista de Chamados</h2>
+      <h2> {{ getTitle() | translate }} </h2>
       <button mat-icon-button (click)="close()" aria-label="Fechar">
         <mat-icon>close</mat-icon>
       </button>
     </div>
 
     <div class="search-area">
-      <app-custom-input [label]="'Pesquisar Chamado'" [placeholder]="'Digite título, operador ou conexão...'"
+      <app-custom-input 
+        [label]="'inputs.call-modal.search-label' | translate" 
+        [placeholder]="'inputs.call-modal.search-placeholder' | translate"
         [control]="searchControl" [type]="'text'" [size]="'full-width'" (onSearch)="onSearchCalls()"></app-custom-input>
 
       <app-dynamic-button type="find" (clicked)="onSearchCalls()" 
@@ -17,7 +19,7 @@
   </div>
 
   <div *ngIf="hasCalls; else noCalls" class="modal-list">
-    <h3>Chamados Encontrados: <span class="highlight-count">{{ calls.length }}</span></h3>
+    <h3>{{ 'inputs.call-modal.found-calls-title' | translate }} <span class="highlight-count">{{ calls.length }}</span></h3>
 
     <div class="modal-item" *ngFor="let call of calls" tabindex="0">
       <div class="call-title"><strong>{{ call.title }}</strong></div>
