--- a/src/app/pages/home/client-home/client-home.component.html
+++ b/src/app/pages/home/client-home/client-home.component.html
@@ -1,1 +1,18 @@
-<p>client-home works!</p>
+<div class="container" *ngIf="!isLoading">
+    <app-dashboard-card (click)="openCallsModal('open')" icon="calls" [end]="countOpenCalls" [duration]="1200"
+        [label]="'home.components.ticket-open' | translate" color="#3f51b5">
+    </app-dashboard-card>
+
+    <app-dashboard-card (click)="openCallsModal('closed')" icon="headset_mic" [end]="countClosedCalls" [duration]="1200"
+        [label]="'home.components.ticket-closed' | translate" color="#4caf50">
+    </app-dashboard-card>
+
+    <app-dashboard-card (click)="openCallsModal('all')" icon="headset_off" [end]="countAllCalls" [duration]="1200"
+        [label]="'home.components.ticket-answered' | translate" color="#ff9800">
+    </app-dashboard-card>
+</div>
+
+<div class="chart-container" *ngIf="!isLoading">
+    <app-chart [type]="ChartType.LINE" [title]="'charts.lineChart.title' | translate"
+        [chamados]="simplifiedCalls"></app-chart>
+</div>
