fix any modifications

--- a/src/app/pages/exemples/exemples.component.html
+++ b/src/app/pages/exemples/exemples.component.html
@@ -106,13 +106,13 @@
 </form>
 
 
-<app-chart [type]="ChartType.BAR" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
+<!-- <app-chart [type]="ChartType.BAR" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
 <app-chart [type]="ChartType.AREA" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
 <app-chart [type]="ChartType.LINE" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
 
-<app-chart [type]="ChartType.COLUMN" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart>
+<app-chart [type]="ChartType.COLUMN" [title]="'Chamados por Empresa e Mês'" [chamados]="chamadosMock"></app-chart> -->
 
 <!-- <app-pie-chart [chamados]="chamadosMock"></app-pie-chart> -->
 
