--- a/src/app/pages/home/call-modal/call-modal.component.scss
+++ b/src/app/pages/home/call-modal/call-modal.component.scss
@@ -38,3 +38,20 @@
 .status-open {
   background-color: #f44336;
 }
+
+.keywords {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px; // espaço entre as tags
+  margin-top: 0.5rem;
+}
+
+.keyword {
+  padding: 4px 10px;
+  border-radius: 16px;
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: #fff;
+  white-space: nowrap;
+}
+
