--- a/src/app/pages/home/call-modal/call-modal.component.html
+++ b/src/app/pages/home/call-modal/call-modal.component.html
@@ -8,18 +8,17 @@
     </div>
 
     <div class="search-area">
-      <app-custom-input 
-        [label]="'inputs.call-modal.search-label' | translate" 
-        [placeholder]="'inputs.call-modal.search-placeholder' | translate"
-        [control]="searchControl" [type]="'text'" [size]="'full-width'" (onSearch)="onSearchCalls()"></app-custom-input>
+      <app-custom-input [label]="'inputs.call-modal.search-label' | translate"
+        [placeholder]="'inputs.call-modal.search-placeholder' | translate" [control]="searchControl" [type]="'text'"
+        [size]="'full-width'" (onSearch)="onSearchCalls()"></app-custom-input>
 
-      <app-dynamic-button type="find" (clicked)="onSearchCalls()" 
-        class="search-button"></app-dynamic-button>
+      <app-dynamic-button type="find" (clicked)="onSearchCalls()" class="search-button"></app-dynamic-button>
     </div>
   </div>
 
   <div *ngIf="hasCalls; else noCalls" class="modal-list">
-    <h5>{{ 'inputs.call-modal.found-calls-title' | translate }} <span class="highlight-count">{{ calls.length }}</span></h5>
+    <h5>{{ 'inputs.call-modal.found-calls-title' | translate }} <span class="highlight-count">{{ calls.length }}</span>
+    </h5>
 
     <div class="modal-item" *ngFor="let call of calls" tabindex="0">
       <!-- Linha com título e status -->
@@ -29,17 +28,20 @@
           {{ call.closed ? 'Fechado' : 'Aberto' }}
         </div>
       </div>
-    
+
       <!-- Metadados -->
       <div class="call-meta">
         <span><strong>Cliente:</strong> {{ call.client?.name || '-' }}</span>
         <span><strong>Operador:</strong> {{ call.operator?.name || '-' }}</span>
         <span><strong>Conexão:</strong> {{ call.connection || '-' }}</span>
       </div>
-    
+
       <!-- Tags -->
       <div class="keywords" *ngIf="call.tags?.length">
-        <span class="keyword" *ngFor="let tag of call.tags">{{ tag }}</span>
+        <span class="keyword" *ngFor="let tag of call.tags"
+              [ngStyle]="{ 'background-color': generateColorFromString(tag) }">
+          {{ tag }}
+        </span>
       </div>
     </div>
   </div>
