--- a/src/app/shared/components/action-button/action-button.component.html
+++ b/src/app/shared/components/action-button/action-button.component.html
@@ -1,7 +1,8 @@
-<button [class]="cssClass" (click)="emit()" [disabled]="disabled">
-    <span>{{ label || config.labelKey | translate }}</span>
-    <div class="icon">
-      <mat-icon class="sidenav-link-icon large-icon">{{ iconName }}</mat-icon>
-    </div>
-  </button>
-  
+<button [class]="cssClass" (click)="emit()" [disabled]="disabled" 
+  (mouseenter)="onMouseEnter()"
+  (mouseleave)="onMouseLeave()">
+  <span>{{ label || config.labelKey | translate }}</span>
+  <div class="icon">
+    <mat-icon class="sidenav-link-icon large-icon">{{ iconName }}</mat-icon>
+  </div>
+</button>
