--- a/src/app/shared/components/dynamic-select/dynamic-select.component.html
+++ b/src/app/shared/components/dynamic-select/dynamic-select.component.html
@@ -1,14 +1,28 @@
-<mat-form-field [ngClass]="[getSizeClass(), cssClass]" appearance="outline" class="custom-field full-width">
-  <mat-label>{{ label }}</mat-label>
-  <mat-select [ngModel]="model" (ngModelChange)="onChange.emit($event)" [disabled]="disabled"
-    [placeholder]="placeholder">
+<div class="select-container">
+  <mat-form-field [ngClass]="[getSizeClass()]" appearance="outline" class="custom-field full-width">
+    <mat-label>{{ label }}</mat-label>
+    <mat-select
+      [ngModel]="model"
+      (ngModelChange)="onSelectionChange($event)"
+      [disabled]="disabled"
+      [placeholder]="placeholder"
+    >
+      <mat-option *ngIf="showDefaultOption" [value]="''">{{ defaultOptionLabel }}</mat-option>
+      <mat-option *ngFor="let option of options" [value]="option[valueKey] ?? option">
+        {{ option[labelKey] ?? option }}
+      </mat-option>
+    </mat-select>
+    <mat-error *ngIf="errorMessage">{{ errorMessage }}</mat-error>
+  </mat-form-field>
 
-    <mat-option *ngIf="showDefaultOption" [value]="''">{{ defaultOptionLabel }}</mat-option>
-
-    <mat-option *ngFor="let option of options" [value]="option[valueKey] ?? option">
-      {{ option[labelKey] ?? option }}
-    </mat-option>
-  </mat-select>
-
-  <mat-error *ngIf="errorMessage">{{ errorMessage }}</mat-error>
-</mat-form-field>
+  <button
+    *ngIf="type !== 'sector'"
+    mat-icon-button
+    [color]="getButtonColor()"
+    (click)="handleButtonClick()"
+    [matTooltip]="model ? 'Desvincular' : 'Adicionar novo'"
+    class="action-button"
+  >
+    <mat-icon>{{ getButtonIcon() }}</mat-icon>
+  </button>
+</div>
