--- a/src/app/shared/components/rich-text/rich-text.component.html
+++ b/src/app/shared/components/rich-text/rich-text.component.html
@@ -1,6 +1,6 @@
 <!-- rich-text-editor.component.html -->
 <div class="rich-text-container">
-    <label *ngIf="label" class="editor-label">{{ label }}</label>
+    <!-- <label *ngIf="label" class="editor-label">{{ label }}</label> -->
     
     <div class="editor-controls">
       <button mat-button (click)="togglePreview()" class="preview-btn">
