--- a/src/app/shared/components/custom-input/custom-input.component.scss
+++ b/src/app/shared/components/custom-input/custom-input.component.scss
@@ -45,3 +45,13 @@
 ::ng-deep .mat-mdc-form-field-invalid .mat-mdc-outline {
   border-color: #f44336 !important;
 }
+
+::ng-deep .custom-textarea {
+  resize: vertical;
+  min-height: 100px;
+  max-height: 300px;
+  font-size: 13px !important;
+  line-height: 1.4;
+  padding: 4px 8px;
+  color: #222 !important;
+}
