--- a/src/app/shared/components/dashboard-card/dashboard-card.component.html
+++ b/src/app/shared/components/dashboard-card/dashboard-card.component.html
@@ -3,11 +3,12 @@
        'border-top-color': color, 
        'background-color': getContrastingBackground(color) 
      }">
-  <div class="icon-container" [ngStyle]="{ 'color': color }">
-    <mat-icon class="icon">{{ icon }}</mat-icon>
-  </div>
-  <div class="content">
+  <div class="top-content">
+    <div class="icon-container" [ngStyle]="{ 'color': color }">
+      <mat-icon class="icon">{{ icon }}</mat-icon>
+    </div>
     <app-number-counter [end]="end" [duration]="duration"></app-number-counter>
-    <div class="label">{{ label }}</div>
   </div>
+
+  <div class="label">{{ label }}</div>
 </div>
