--- a/src/app/shared/components/line-chart/line-chart.component.html
+++ b/src/app/shared/components/line-chart/line-chart.component.html
@@ -1,7 +1,8 @@
 <div class="chart-header">
   <!-- Botão à esquerda -->
-  <button class="close-all-button" (click)="fecharTodos()">
-    <mat-icon>playlist_remove</mat-icon> {{ 'charts.closeAll' | translate }}
+  <button class="close-all-button" (click)="alternarSeries()">
+    <mat-icon>{{ todasFechadas ? 'playlist_add' : 'playlist_remove' }}</mat-icon>
+    {{ todasFechadas ? ('charts.openAll' | translate) : ('charts.closeAll' | translate) }}
   </button>
 
   <!-- Toggle à direita -->
