falta ajustar input do conexao

--- a/src/app/pages/calls/calls.component.scss
+++ b/src/app/pages/calls/calls.component.scss
@@ -9,3 +9,50 @@
   ::ng-deep mat-radio-button.radio-btn.mat-accent .mat-radio-inner-circle {
     background-color: #222 !important;
   }
+
+  .top-section {
+    display: flex;
+    flex-direction: column;
+  
+    .main-top {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+  
+    .companies, .clients, .conexao {
+      flex: 1;
+      min-width: 200px;
+      margin-right: 10px;
+    }
+  
+    .conexao {
+      order: 0; // padrão
+    }
+  
+    .title {
+      margin-top: 10px;
+    }
+  
+    @media (max-width: 969px) {
+      .main-top {
+        flex-wrap: wrap;
+        gap: 10px;
+      }
+  
+      .companies,
+      .clients {
+        width: 48%;
+      }
+  
+      .conexao {
+        width: 100%;
+        order: 2; // desce abaixo dos dois primeiros
+      }
+  
+      .title {
+        order: 3;
+      }
+    }
+  }
+  
